fixed 'why us'  section misaligned contents

--- a/css/_why.scss
+++ b/css/_why.scss
@@ -32,7 +32,7 @@ section#why-us{
         }
         div#right{
             width: 40%;
-            margin-top: 100px;
+        
         }
 
         
