--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,6 @@ section#why-us #container div#left {
 }
 section#why-us #container div#right {
   width: 40%;
-  margin-top: 100px;
 }
 section#why-us #container article {
   margin-bottom: 50px;
